feat: All lists in the application have switched to pagination, and application crashes will no longer occur with large datasets.